Random string encryption and decryption working